# sky-edge

./: .gitignore  LICENSE  README.md  pyproject.toml  query.json
src/sky_edge/: auth.py  util.py
src/sky_edge/api/: code_table.py  communication_preference.py  consent.py  constituent.py  data_integration.py  event.py  fundraising.py  gift.py  gift_aid.py  gift_batch.py  gift_v2.py  list.py  list_v2.py  membership.py  opportunity.py  query.py  standard_reports.py  webhook.py
src/sky_edge/api/openapi_definitions/: constituent.json
src/sky_edge/helpers/: address.py  email.py  query.py
